# KNX-IOT-STACK

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build.yml  checks.yml  doxygen-publish.yml  gitlabsync.yml
api/: oc_knx.c  oc_ri.c
include/: oc_knx.h
port/: CMakeLists.txt  oc_log.h
port/ot-efr32/: abort.c  clock.c  dns-sd.c  ipadapter.c  knx_cli.c  knx_cli_ot_extension.cmake  oc_config.h  openthread-efr32-knx.slcp  ot_core_extension.cpp  random.c  storage.c
samples/: CMakeLists.txt
samples/ot-lightswitch/: CMakeLists.txt  README.md  actuator.cmake  app.h  app_actuator.c  app_common.c  app_common_knx.c  app_sensor.c  main.c  sensor.cmake
script/: bootstrap  build  clang-format-check  make-pretty
